--- a/_notebooks/2022-11-02-gp_rotcurves.ipynb
+++ b/_notebooks/2022-11-02-gp_rotcurves.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb16a5b",
+   "id": "5954d256",
    "metadata": {},
    "source": [
     "#hide\n",
@@ -26,28 +26,37 @@
     "All rights reserved.\n",
     "\n",
     "This source code is licensed under the BSD-style license found in the\n",
-    "LICENSE file in the root directory of this source tree. "
+    "license_notebooks file in the root directory of this source tree. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "913c0c3d",
+   "id": "1c818a8d",
    "metadata": {},
    "source": [
-    "# Attribution"
+    "# Attribution & License"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c7ae16d",
+   "id": "2c49c60d",
    "metadata": {},
    "source": [
-    "This code is freely distributed and it can be used and copied at will. However, if you use parts of the code below you are requested to properly cite the paper **link_to_paper**"
+    "If you use parts of the code found in this notebook please cite the paper **link_to_paper**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "172fd84e",
+   "id": "0c32db76",
+   "metadata": {},
+   "source": [
+    "Copyright (c) 2022, Lorenzo Posti.\n",
+    "The code is distributed under BSD-style license and it can be used and copied at will."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f81972b",
    "metadata": {},
    "source": [
     "# Introduction"
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35ee641a",
+   "id": "da89d901",
    "metadata": {},
    "source": [
     "Galaxy rotation curves are usually modelled by assuming that each datapoint in the curve is independent from the others. However, this is naturally just a first order approximation, since observational effects such due to geometrical projection and resolution, as well as physical effects such as non-circular motions, can make the velocities measured in two adjacent annnuli significantly correlated.\n",
@@ -67,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0facee82",
+   "id": "8a08dcc8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -75,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e085d641",
+   "id": "5cf871e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f215ea",
+   "id": "6afc399a",
    "metadata": {},
    "source": [
     "# Data"
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489a204e",
+   "id": "d879485a",
    "metadata": {},
    "source": [
     "Here I introduce the data for the galaxy NGC 2403 and the functions needed to work with Eq. (1) in the paper.\n",
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ec71e2",
+   "id": "fa1e3da5",
    "metadata": {},
    "source": [
     "## Definitions of functions for curve decomposition"
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc23e998",
+   "id": "bd4cbc92",
    "metadata": {},
    "source": [
     "I start with some definitions to specify $V_{\\rm DM}(R)$, the contribution of DM to the circular velocity in Eq. (1).\n",
@@ -152,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "277cc7ee",
+   "id": "fecb4193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a293bd",
+   "id": "96eeef72",
    "metadata": {},
    "source": [
     "Note that below I use `jax`, and not `numpy`, to define these functions. This is needed in order to do model inference with `numpyro`."
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "688964dc",
+   "id": "1277becb",
    "metadata": {},
    "source": [
     "Finally, below I implement the model rotation curve in Eq. (1). Two things are worth pointing out:\n",
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "050c5497",
+   "id": "796817c9",
    "metadata": {},
    "source": [
     "I take the rotation curve data of NGC 2403 from the [SPARC](http://astroweb.cwru.edu/SPARC/) catalog at face value. I include a copy of the file here for convenience. "
@@ -235,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "26e9182c",
+   "id": "a6b88bcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b39cb7",
+   "id": "00255ef1",
    "metadata": {},
    "source": [
     "Let's plot the data below together with the best-fit model obtained by [Posti et al. (2019)](https://ui.adsabs.harvard.edu/abs/2019A%26A...626A..56P/abstract) for reference."
@@ -253,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e1b1806b",
+   "id": "1b9e23a7",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f91c3f",
+   "id": "31ba4586",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d8780e",
+   "id": "b4cd19f2",
    "metadata": {},
    "source": [
     "Let's now get to the modelling side of things. I set up two models here. The first one is analogous to [Posti et al. (2019)](https://ui.adsabs.harvard.edu/abs/2019A%26A...626A..56P/abstract), as well as many other works in this context (e.g. [Katz et al. 2017](https://ui.adsabs.harvard.edu/abs/2017MNRAS.466.1648K/abstract), [Li et al. 2020](https://ui.adsabs.harvard.edu/abs/2020ApJS..247...31L/abstract), [Mancera-Pina et al. 2022](https://ui.adsabs.harvard.edu/abs/2022MNRAS.514.3329M/abstract), [di Teodoro et al. 2022](https://ui.adsabs.harvard.edu/abs/2022arXiv220702906D/abstract)), it has a $\\chi^2$ likelihood and it implicitly assumes that the rotation curve datapoints are independent. The second one generalizes this model by using GPs to take into account data correlations. I recommend the recent review by [Aigrain & Foreman-Mackey (2022)](https://ui.adsabs.harvard.edu/abs/2022arXiv220908940A/abstract), in particular their first section, as an introduction to GPs.\n",
@@ -325,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f12bbe57",
+   "id": "399819d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -333,14 +342,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55a0ccc",
+   "id": "2ab58a43",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "819bf6bc",
+   "id": "8ab90dd4",
    "metadata": {},
    "source": [
     "## Gaussian Processes"
@@ -348,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eeb765c",
+   "id": "4e08ffdc",
    "metadata": {},
    "source": [
     "Let's generate GPs with an `Exp-Squared` kernel with two parameters, an amplitude $A_k$ and a scale $s_k$, i.e.\n",
@@ -361,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "33b51c62",
+   "id": "24e788e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fe8bbe",
+   "id": "34ed5f28",
    "metadata": {},
    "source": [
     "## `numpyro` models"
@@ -384,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1c3fe3",
+   "id": "09599b6f",
    "metadata": {},
    "source": [
     "I now set up the model's posterior distribution to be sampled by `numpyro`, thus it is a function containing `pyro` primitives."
@@ -392,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1da3152",
+   "id": "fa6ea0af",
    "metadata": {},
    "source": [
     "The model starts by defining the priors on the physical parameters ($\\theta_V$ in the paper). I use:\n",
@@ -404,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "926511a3",
+   "id": "c5455c3d",
    "metadata": {},
    "source": [
     "After the definition of the priors the function branches out: one branch with GPs and one without. I borrowed this structure from the [transit example](https://github.com/dfm/araa-gps/blob/main/src/scripts/transit.ipynb) of Fig. 3 in [Aigrain & Foreman-Mackey (2022)](https://ui.adsabs.harvard.edu/abs/2022arXiv220908940A/abstract).\n",
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc163d8d",
+   "id": "a1457763",
    "metadata": {},
    "source": [
     "## Running the model without GP, i.e. assuming independent datapoints"
@@ -468,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db892411",
+   "id": "a41edd18",
    "metadata": {},
    "source": [
     "I start by sampling the posterior of the model akin to that of [Posti et al. (2019)](https://ui.adsabs.harvard.edu/abs/2019A%26A...626A..56P/abstract), i.e. assuming that the points in the curve are independent.\n",
@@ -479,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e1862714",
+   "id": "110f94d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb96a78",
+   "id": "3a4b46d9",
    "metadata": {},
    "source": [
     "Let's plot the chains to make sure each parameter is converged"
@@ -639,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "71769d1b",
+   "id": "df4570ca",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec66d7f1",
+   "id": "b122991d",
    "metadata": {},
    "source": [
     "## Running the model with GP, i.e. taking into account data correlations"
@@ -675,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e90d7a",
+   "id": "6a0e0178",
    "metadata": {},
    "source": [
     "Now, let's have a look at what happens when GPs come into play. I run exactly the same procedure as before to sample the model's posterior, but this time I select the branch with `use_gp=True`. Since now I have two more free parameters, the scale and amplitude of the kernel, I also initialize these two in `init_strategy`."
@@ -842,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "112966cf",
+   "id": "a347d302",
    "metadata": {},
    "source": [
     "And let's plot again the chains to make sure that every parameter has converged"
@@ -851,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f2a5a936",
+   "id": "ca7d8e80",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2d24d0",
+   "id": "e8eb3b4a",
    "metadata": {},
    "source": [
     "Everything looks good for both models."
@@ -883,14 +892,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fc67a84",
+   "id": "d674a54f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4442d9a1",
+   "id": "9cf47738",
    "metadata": {},
    "source": [
     "## Comparing the predictions of the two models"
@@ -898,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a43c3e5",
+   "id": "470f7f45",
    "metadata": {},
    "source": [
     "Finally, I can compare the posterior distributions of the two models. I use [corner](https://corner.readthedocs.io/en/latest/) to plot 1-D and 2-D projections of the posteriors."
@@ -946,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30957d3e",
+   "id": "583ed2f9",
    "metadata": {},
    "source": [
     "Then I can compare the predicted curve decompositions of the two models.\n",
@@ -956,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "32174cf3",
+   "id": "5406103c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "1f669083",
+   "id": "c652aa2a",
    "metadata": {},
    "outputs": [
     {
@@ -1013,14 +1022,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfbc312f",
+   "id": "67ce9d91",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "63d0e59e",
+   "id": "abba2ca5",
    "metadata": {},
    "source": [
     "## Correlation matrix"
@@ -1028,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb74d33",
+   "id": "1694f414",
    "metadata": {},
    "source": [
     "Given that the parameters of the kernel $A_k$ and $s_k$ are well constrained by the model, we can have a look at the correlation matrix of the model with GPs."
@@ -1115,7 +1124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe95464",
+   "id": "0a831b91",
    "metadata": {},
    "source": [
     "The peculiar 2-block shape of this matrix is due to the combined H$\\alpha$-HI nature of the rotation curve. The optical H$\\alpha$ curve samples the inner regions of the galaxy, up to $\\sim 5$ kpc, with a finer spatial sampling of 0.1 kpc with respect to the HI rotation curve, which instead has a spacing of 0.5 kpc and is from 5 kpc outwards."
